fix: overflow table wrapper

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -314,9 +314,7 @@ button:hover {
 }
 .table-wrapper {
   border-radius: 4px;
-  overflow-x: auto;
   width: 100%;
-  max-height: 1000px;
   -webkit-box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
